[package]
name = "tauri-ssb"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_ssb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-decorum = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
url = "2"
tauri-plugin-window-state = "2.4.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
